# quick-environments

./: README.md
javascript/vanilla/: .eslintrc.yaml  package-lock.json  package.json
python/vanilla/: .coverage  .green  README.md  pyproject.toml
python/vanilla/src/: __main__.py
python/vanilla/src/__test__/: test___main__.py
react/javascript/: .eslintrc.yaml  package-lock.json  package.json
react/javascript/src/: App.jsx
react/typescript/: .eslintrc.yaml  package-lock.json  package.json
typescript/vanilla/: .eslintrc.yaml  package-lock.json  package.json  tsconfig.json
typescript/vanilla/src/: index.ts  persons.ts
